
    Notifications:
    * notify.py: unique spoolfiles name no longer created with uuid
    * Warn user if only_services does never match 

    Livestatus:
    * Table statehist: Improved detection of vanished hosts and services.
                       Now able to detect and remove nonsense check plugin output 
    * FIX: able to handle equal comment_id between host and service

    BI:
    * Integrated availability computing, including nifty time warp feature

    WATO:
    * Configuration of datasource programs via dedicated rules
    * New editor for Business Intelligence rules
    * Rule Editor: Now able to show infeffective rules
    * Valuespec: CascadingDropdown now able to process choice values from functions
    * cisco_qos parameters now configurable via WATO
    * Removed global option logwatch_forward_to_ec, moved this to the
      logwatch_ec ruleset. With this option the forwarding can now be enabled
      for each logfile on a host
    * Configuration of an alternativ host check command
    * Inventory: Display link symbol for ps ruleset
    * FIX: Rulesets: correct display of rules within subfolders

1.2.2p1:
    Core:
    * FIX: correctly quote ! and \ in active checks for Nagios
    * FIX: Performing regular inventory checks at configured interval even
           when the service is in problem state
    * Check_MK core now supports umlauts in host-/service- and contactgroup names

    Checks & Agents:
    * FIX: vsphere_agent: fix problems whith ! and \ in username or password
    * FIX: check_mk_agent.aix: fix shebang: was python, must be ksh
    * FIX: cisco_qos: Be compatible to newer IOS-XE versions (Thanks to Ken Smith)

    Multisite:
    * FIX: do not remove directories of non-exisant users anymore. This lead to
           a deletion of users' settings in case of an external authentication
           (like mod_ldap).
    * FIX: Fixed handling of dashboards without title in sidebar view snapin

    WATO: